<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.android.inventoryapp.AddProduct">


    <EditText
        android:id="@+id/etName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/name_of_product" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/etName"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="11dp" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/price_of_product"
        android:inputType="number" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPrice"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/quantity_of_product"
        android:inputType="number" />

    <EditText
        android:id="@+id/etSupplier"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etQuantity"
        android:ems="10"
        android:hint="@string/email_supplier"
        android:inputType="text" />

    <Button
        android:id="@+id/btnImage"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSupplier"
        android:text="@string/add_image" />
</RelativeLayout>
